kubernetes/k3s/apps/storage/longhorn/chart/templates/httproute.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  labels:
    traefik-instance: internal
spec:
  hostnames:
    - longhorn.plexmox.com
  rules:
    - backendRefs:
        - kind: Service
          name: longhorn-frontend
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: auth-internal
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: traefik
